@@ -13,6 +13,10 @@ Core and Builtins
 - Verify the types of AST strings and identifiers provided by the user before
   compiling them.
 
+- Issue #12647: The None object now has a __bool__() method that returns False.
+  Formerly, bool(None) returned False only because of special case logic
+  in PyObject_IsTrue().
+
 - Issue #12579: str.format_map() now raises a ValueError if used on a
   format string that contains positional fields. Initial patch by
   Julian Berman.
